[gd_scene load_steps=4 format=3 uid="uid://bfaewwidoje7h"]

[ext_resource type="Script" path="res://scenes/ui/card_menu_ui.gd" id="1_vnasp"]
[ext_resource type="Resource" uid="uid://cyyx3jqcpf4bw" path="res://cards/basic/basic_defend.tres" id="2_whwgh"]
[ext_resource type="PackedScene" uid="uid://2tu4afbweci0" path="res://scenes/ui/card_visuals.tscn" id="3_2k67v"]

[node name="CardMenuUI" type="CenterContainer"]
offset_right = 25.0
offset_bottom = 30.0
size_flags_horizontal = 3
script = ExtResource("1_vnasp")
card = ExtResource("2_whwgh")

[node name="Visuals" parent="." instance=ExtResource("3_2k67v")]
layout_mode = 2

[connection signal="gui_input" from="Visuals" to="." method="_on_visuals_gui_input"]
[connection signal="mouse_entered" from="Visuals" to="." method="_on_visuals_mouse_entered"]
[connection signal="mouse_exited" from="Visuals" to="." method="_on_visuals_mouse_exited"]
